pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  containers:
    - name: mongodb
      image: registry.access.redhat.com/rhscl/mongodb-36-rhel7:latest
      volumeMounts:
      - mountPath: "/etc/mongodb"
        name: mongodb-cert-secret
  volumes:
  - name: mongodb-cert-secret
    secret:
      secretName: mongodb-cert-secret
