route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: mongodb
spec:
  to:
    kind: Service
    name: mongodb-service
  tls:
    termination: passthrough
